--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -7,10 +7,11 @@
   {{ partial "navbar.html" . }}
 
   <!--  container -->
+  <!--  container -->
   <div class="container-fluid">
     <div class="row h-100">
       {{ partial "sidebar.html" . }}
-      {{ partial "menopur-body.html" . }}
+      {{ partial "home-body.html" . }}
     </div>
   </div>
  
@@ -20,9 +21,6 @@
 
   <!-- js libs -->
   {{ partial "js-libs.html" . }}
-
-  <!-- js -->
-  {{ partial "menopur-js.html" . }}
 
   
 </body>
