--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,9 +2,9 @@
     <!-- Copyright -->
     <div class="text-center p-3">
       <small>This website was made by Oliver Stringham.</small>
-      <small>To show your support, you can 
+      <small>
         <a class="text-dark" href="https://www.buymeacoffee.com/oliverstringham" target="_blank">
-            buy me a coffee ☕</a>.
+          To show your support, you can buy him a coffee ☕</a>.
     </small>
     </div>
     <!-- Copyright -->
