--- a/layouts/_default/disclaimer.html
+++ b/layouts/_default/disclaimer.html
@@ -10,7 +10,11 @@
   <div class="container-fluid">
     <div class="row h-100">
       {{ partial "sidebar.html" . }}
-      {{ partial "home-body.html" . }}
+        <div class="col-sm-12 col-lg-10 mb-3 mt-3">
+
+            {{ .Content }}
+            
+        </div>
     </div>
   </div>
  
