--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -9,13 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href='about'>About</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Medicines</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href='disclaimer'>Disclaimer</a>
         </li>
         </ul>
     </div>
