--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,13 +3,13 @@
     <!-- Add your sidebar content here -->
     <!-- <div class="h3 text-left">Medicines</div> -->
     <ul class="list-group">
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="meds/cetrotide">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/cetrotide">
             Cetrotide</a>
         </li>
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="meds/menopur">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/menopur">
             Menopur</a>
         </li>
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="meds/gonalf">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/gonalf">
             Gonal-f Pen</a>
         </li>
     </ul>
