--- a/layouts/partials/menopur-js.html
+++ b/layouts/partials/menopur-js.html
@@ -11,7 +11,7 @@
         return `<div class="text-right align-text-bottom" >
                     <label for="" class="form-label">Day ${n}</label>
                     <select class="form-select form-select-lg" name="" id="dose${n}">
-                        <option value="0" selected>Select Dose </option>
+                        <option value="0" selected>Dose</option>
                         <option value="1">75 units</option>
                         <option value="2">150 units</option>
                     </select>
