--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -8,9 +8,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-            <a class="nav-link" href='/about'>About</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href='/about'>About</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Select Medicine
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/meds/cetrotide">Cetrotide</a>
+                    <a class="dropdown-item" href="/meds/menopur">Menopur</a>
+                    <a class="dropdown-item" href="/meds/gonalf">Gonal-f Pen</a>
+                </div>
+            </li>
         <li class="nav-item">
             <a class="nav-link" href='/disclaimer'>Disclaimer</a>
         </li>
