start cetrotide, add favicon

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,6 +8,8 @@
 
     <title>{{ .Title }}</title>
 
+    <!-- favicon -->
+    <link rel="icon" href="/favicon.ico"> 
     
     <!-- <link rel="stylesheet" href=""> -->
     <!-- Bootstrap CSS -->
