--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -19,7 +19,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/meds/cetrotide">Cetrotide</a>
                     <a class="dropdown-item" href="/meds/menopur">Menopur</a>
-                    <a class="dropdown-item" href="/meds/gonalf">Gonal-f Pen</a>
+                    <a class="dropdown-item" href="/meds/gonal-f">Gonal-f Pen</a>
                 </ul>
               </li>
         <li class="nav-item">
