--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -9,7 +9,7 @@
         <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/menopur">
             Menopur</a>
         </li>
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/gonalf">
+        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/gonal-f">
             Gonal-f Pen</a>
         </li>
     </ul>
