--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,9 +3,9 @@
     <!-- Add your sidebar content here -->
     <!-- <div class="h3 text-left">Medicines</div> -->
     <ul class="list-group">
-        <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/cetrotide">
+        <!-- <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/cetrotide">
             Cetrotide</a>
-        </li>
+        </li> -->
         <li class="list-group-item"> <a class="nav-link active" aria-current="page" href="/meds/menopur">
             Menopur</a>
         </li>
