--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -11,6 +11,36 @@
     <div class="row h-100">
       {{ partial "sidebar.html" . }}
 
+        <div class="col-xs-12 col-sm-8 col-md-6 ml-2 mt-3">
+          <div class="h4">
+            This website is designed to assist fertility nurses calculate doses for common fertility medicines.
+          </div>
+
+          <div class="row">
+
+            <div class="col-xs-12 col-sm-8 col-md-6">
+              <div class="h6">
+                  The information calculated is:
+              </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">The date the patient finishes their medicine</li>
+                  <li class="list-group-item">How much more medicine you might need to order or how much is left over</li>
+                </ul>
+            </div>
+
+            <div class="col-xs-12 col-sm-8 col-md-6">
+              <div class="h6">
+                The information the user provides is:
+              </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">The current amount of medicine on hand</li>
+                  <li class="list-group-item">The dosage per day</li>
+                </ul>
+            </div>
+
+          </div>
+
+        </div>
     </div>
   </div>
  
