--- a/layouts/_default/scrap.html
+++ b/layouts/_default/scrap.html
@@ -1,14 +1,8 @@
-<form name="contact-submission" action="https://formspree.io/f/xaygenoo" method="post" accept-charset="utf-8">
-    <fieldset id="contact-inputs">
-      <legend>Contact Us Form</legend>
-      <label for="full-name">Full Name</label>
-      <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
-      <label for="email-address">Email address</label>
-      <input type="email" name="_replyto" id="email-address" placeholder="your@email.here" required="">
-      <label for="message">Message</label>
-      <textarea rows="6" name="message" id="message" placeholder="Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla nullam quis risus." required=""></textarea>
-      <input type="hidden" name="_subject" id="email-subject" value="Contact Us Form Submission">
-    </fieldset>
-    <input type="submit" value="Send Message">
-    <small class="db dib-l ml4-l">Powered by <a href="https://formspree.io" target="_blank">Formspree</a></small>
-  </form>
+<div class="row">
+  <div class="col-xs-12 col-sm-8 col-md-6 col-sm-push-2 col-md-push-3">
+    <h5>This website is designed to assist fertility nurses calculate doses for common fertility medicines.</h5>
+    <h6>Below are the current medicines available. The output will be the date the patient finishes their medicine and how many more you might need to order.</h6>
+    
+    <div class="col-sm-12 gutter"></div>
+  </div>
+</div>
